rocket/measurements/verilator-large-v1.6/binary-size.txt
START: Current timestamp in milliseconds: 1731323089178
GROUP: verilator SUBGROUP: firtool COMMAND: firtool --lowering-options=disallowLocalVariables /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-large-v1.6-binary-size//rocket.fir -o /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-large-v1.6-binary-size//rocket.sv
/bin/sh: line 1: perf: command not found
GROUP: verilator SUBGROUP: verilator
/bin/sh: line 1: perf: command not found
GROUP: verilator SUBGROUP: clang
GROUP: verilator SUBGROUP: firtool COMMAND: firtool --lowering-options=disallowLocalVariables /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-large-v1.6-binary-size//rocket.fir -o /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-large-v1.6-binary-size//rocket.sv
/home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-large-v1.6-binary-size//rocket.fir:1:1: error: expected 'FIRRTL'
circuit RocketSystem :
^

 Performance counter stats for '/usr/local/bin/firtool --lowering-options=disallowLocalVariables /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-large-v1.6-binary-size//rocket.fir -o /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-large-v1.6-binary-size//rocket.sv':

             20.05 msec task-clock:u                     #    0.981 CPUs utilized             
                 0      context-switches:u               #    0.000 /sec                      
                 0      cpu-migrations:u                 #    0.000 /sec                      
             2,346      page-faults:u                    #  117.002 K/sec                     
         7,554,122      cycles:u                         #    0.377 GHz                         (8.92%)
         6,261,890      stalled-cycles-frontend:u        #   82.89% frontend cycles idle        (23.83%)
       145,661,956      instructions:u                   #   19.28  insn per cycle            
                                                  #    0.04  stalled cycles per insn     (38.82%)
        30,013,819      branches:u                       #    1.497 G/sec                       (53.73%)
           461,056      branch-misses:u                  #    1.54% of all branches             (68.63%)
        62,677,705      L1-dcache-loads:u                #    3.126 G/sec                       (74.72%)
         5,045,952      L1-dcache-load-misses:u          #    8.05% of all L1-dcache accesses   (74.72%)
   <not supported>      LLC-loads:u                                                           
   <not supported>      LLC-load-misses:u                                                     
           998,098      L1-icache-loads:u                #   49.778 M/sec                       (61.18%)
            10,207      L1-icache-load-misses:u          #    1.02% of all L1-icache accesses   (46.27%)
            66,163      dTLB-loads:u                     #    3.300 M/sec                       (31.37%)
            19,573      dTLB-load-misses:u               #   29.58% of all dTLB cache accesses  (16.36%)
                 0      iTLB-loads:u                     #    0.000 /sec                        (1.45%)
     <not counted>      iTLB-load-misses:u                                                      (0.00%)
     <not counted>      L1-dcache-prefetches:u                                                  (0.00%)
   <not supported>      L1-dcache-prefetch-misses:u                                           

       0.020439666 seconds time elapsed

       0.003371000 seconds user
       0.016975000 seconds sys


Some events weren't counted. Try disabling the NMI watchdog:
	echo 0 > /proc/sys/kernel/nmi_watchdog
	perf stat ...
	echo 1 > /proc/sys/kernel/nmi_watchdog
GROUP: verilator SUBGROUP: verilator
%Error: Cannot find file containing module: '/home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-large-v1.6-binary-size/rocket.sv'
%Error: This may be because there's no search path specified with -I<dir>.
        ... Looked in:
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-large-v1.6-binary-size/rocket.sv
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-large-v1.6-binary-size/rocket.sv.v
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-large-v1.6-binary-size/rocket.sv.sv
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-large-v1.6-binary-size/rocket-vtor//home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-large-v1.6-binary-size/rocket.sv
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-large-v1.6-binary-size/rocket-vtor//home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-large-v1.6-binary-size/rocket.sv.v
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-large-v1.6-binary-size/rocket-vtor//home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-large-v1.6-binary-size/rocket.sv.sv
%Error: Exiting due to 2 error(s)

 Performance counter stats for '/usr/bin/verilator -O3 --noassert --x-assign fast --x-initial fast --threads 1 -sv -cc -Mdir /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-large-v1.6-binary-size//rocket-vtor /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-large-v1.6-binary-size//rocket.sv /home/bea/Research/paper-evals/arc-tests/rocket/../verilator-stubs.sv -j 0 -DPRINTF_COND=0 -DASSERT_VERBOSE_COND=0 -DSTOP_COND=0 -Wno-WIDTH':

             57.01 msec task-clock:u                     #    1.478 CPUs utilized             
                 0      context-switches:u               #    0.000 /sec                      
                 0      cpu-migrations:u                 #    0.000 /sec                      
             4,257      page-faults:u                    #   74.672 K/sec                     
       138,095,833      cycles:u                         #    2.422 GHz                         (52.64%)
        23,704,646      stalled-cycles-frontend:u        #   17.17% frontend cycles idle        (42.57%)
       336,182,827      instructions:u                   #    2.43  insn per cycle            
                                                  #    0.07  stalled cycles per insn     (16.01%)
        44,402,153      branches:u                       #  778.858 M/sec                       (36.60%)
         1,778,450      branch-misses:u                  #    4.01% of all branches             (46.23%)
       100,878,622      L1-dcache-loads:u                #    1.770 G/sec                       (48.12%)
         2,242,404      L1-dcache-load-misses:u          #    2.22% of all L1-dcache accesses   (48.15%)
   <not supported>      LLC-loads:u                                                           
   <not supported>      LLC-load-misses:u                                                     
        28,471,973      L1-icache-loads:u                #  499.427 M/sec                       (48.13%)
           448,810      L1-icache-load-misses:u          #    1.58% of all L1-icache accesses   (48.16%)
           557,439      dTLB-loads:u                     #    9.778 M/sec                       (48.19%)
            23,360      dTLB-load-misses:u               #    4.19% of all dTLB cache accesses  (55.37%)
           442,451      iTLB-loads:u                     #    7.761 M/sec                       (64.22%)
            13,311      iTLB-load-misses:u               #    3.01% of all iTLB cache accesses  (58.96%)
           762,006      L1-dcache-prefetches:u           #   13.366 M/sec                       (53.69%)
   <not supported>      L1-dcache-prefetch-misses:u                                           

       0.038574848 seconds time elapsed

       0.038301000 seconds user
       0.017453000 seconds sys


GROUP: verilator SUBGROUP: clang
